<resources>
    <string name="app_name">Android Quiz App</string>
    <string name="score_display_text">"SCORE: "</string>
    <string name="score_percent_display_text">"%"</string>
    <string name="question_display_text">"QUESTION "</string>
    <string name="quit_app">Quit App</string>
    <string name="new_quiz">New Quiz</string>
    <string name="score_correct_answers">Correct Answers: 10</string>
    <string name="score_questions">There Were 10 Questions</string>
    <string name="score_percentage">100%</string>
    <string name="score_title">QUIZ FINISHED!</string>

    <string name="question_next">NEXT</string>
    <string name="question_new_quiz">New Quiz</string>
    <string name="question_bool_true">TRUE</string>
    <string name="question_bool_false">FALSE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_news">News</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
