<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dreams.androidquizapp.ScoreActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorForeground"
        android:elevation="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/finished_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_title"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/comment_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WHATEVER"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/numofquestions_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score_questions"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"
                            android:id="@+id/numcorrect_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score_correct_answers"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/finalgrade_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/score_percentage"
                        android:textAllCaps="true"
                        android:textSize="60dp"
                        android:textColor="@color/bright_green"
                        android:layout_gravity="center_horizontal|bottom"
                        android:gravity="center_horizontal|bottom"
                        />

                </LinearLayout>
                <LinearLayout
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/lime_green"
                        android:text="@string/new_quiz"
                        android:onClick="startOver"/>

                    <Button
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/quit_app"
                        android:textColor="@color/bright_red"
                        android:id="@+id/button"
                        android:onClick="closeApp"/>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>