<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:ignore="HardcodedText, RtlSymmetry">

    <androidx.cardview.widget.CardView
        android:id="@+id/question_holder_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="TRUE OR FALSE"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:elevation="8dp"
        app:cardBackgroundColor="#000"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/newQuizBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_holder_cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Minim deserunt esse non adipisicing consequat ullamco exercitation amet culpa eu."
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/trueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/question_bool_true"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textSize="40sp" />

            <Button
                android:id="@+id/falseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/question_bool_false"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textSize="40sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/newQuizBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/question_new_quiz"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/question_next"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
